[package]
name = "osm-world-gen"
version = "0.2.0"
authors = ["Wardenfar <theo.emeriau@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.1.18", features = ["derive"]}
indicatif = "0.16.2"
osmpbf = "0.2"
mercator = "0.1.2"
googleprojection = "1.2.0"
geo = "0.18.0"
anvil-region = "0.8.1"
named-binary-tag = "0.6.0"
feather-blocks = { git = "https://github.com/feather-rs/feather", rev = "67bc206fe244ea4" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-flame = "0.2"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
tiny-skia = "0.6.3"